# smart_water_dashboard

./: .gitignore  Cargo.toml  README.md  analysis_options.yaml  pubspec.yaml
lib/: main.dart
lib/core/: cloud_messaging.dart  database.dart  extension.dart  server.dart  websocket.dart
lib/native/: bridge_generated.dart  ffi.dart
lib/page/: data_chart.dart  database_view.dart  event_log.dart  server_log.dart  settings.dart
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: AppDelegate.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: Cargo.toml  build.rs
native/native.xcodeproj/: project.pbxproj
native/src/: bridge_generated.rs  lib.rs
test/: widget_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
